security and retrieve service names