@@ -1,5 +1,7 @@
 package org.example;
 
+import org.example.security.AESUtils;
+
 import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,7 +13,8 @@ public class FileUpdater {
 
     public void create(Credencial credencial) throws IOException {
         FileWriter fileWriter = new FileWriter(file, true);
-        fileWriter.append(credencial.toFile());
+        String encrypted = AESUtils.encrypt(credencial.toFile());
+        fileWriter.append(encrypted).append("\n");
         fileWriter.flush();
         fileWriter.close();
     }
@@ -20,9 +23,10 @@ public class FileUpdater {
         FileReader fileReader = new FileReader(file);
         BufferedReader bufferedReader = new BufferedReader(fileReader);
         List<Credencial> credencialList = new ArrayList<>();
-        String line = "";
-        while ((line = bufferedReader.readLine()) != null) {
-            String[] credentianParts = line.split(";");
+        String encryptedLine = "";
+        while ((encryptedLine = bufferedReader.readLine()) != null) {
+            String decrypted = AESUtils.decrypt(encryptedLine);
+            String[] credentianParts = decrypted.split(";");
             Credencial credencial = new Credencial(credentianParts[0], credentianParts[1], credentianParts[2]);
             credencialList.add(credencial);
         }
@@ -31,12 +35,15 @@ public class FileUpdater {
 
     public void update(Credencial credencial) throws IOException {
         List<Credencial> credencialList = findAll();
-        List<Credencial> newCredentialList = credencialList.stream().filter(c -> !c.getService().equalsIgnoreCase(credencial.getService())).collect(Collectors.toList());
+        List<Credencial> newCredentialList = credencialList.stream()
+                                            .filter(c -> !c.getService().equalsIgnoreCase(credencial.getService()))
+                                            .collect(Collectors.toList());
         newCredentialList.add(credencial);
         FileWriter fileWriter = new FileWriter(file, false);
         try {
-            for (Credencial cr : newCredentialList){
-                fileWriter.append(cr.toFile());
+            for (Credencial cr : newCredentialList) {
+                String encrypted = AESUtils.encrypt(cr.toFile());
+                fileWriter.append(encrypted).append( "\n");
             }
         } catch (IOException e) {
             System.out.println(e.getMessage());
@@ -48,11 +55,14 @@ public class FileUpdater {
 
     public void delete(String servicio) throws IOException {
         List<Credencial> credencialList = findAll();
-        List<Credencial> newCredentialList = credencialList.stream().filter(c -> !c.getService().equalsIgnoreCase(servicio)).collect(Collectors.toList());
+        List<Credencial> newCredentialList = credencialList.stream()
+                                                .filter(c -> !c.getService().equalsIgnoreCase(servicio))
+                                                .toList();
         FileWriter fileWriter = new FileWriter(file, false);
         try {
-            for (Credencial cr : newCredentialList){
-                fileWriter.append(cr.toFile());
+            for (Credencial cr : newCredentialList) {
+                String encrypted = AESUtils.encrypt(cr.toFile());
+                fileWriter.append(encrypted).append("\n");
             }
         } catch (IOException e) {
             System.out.println(e.getMessage());
